Endpoint validator decorator, allow to validate from kwargs instead of form args)
